# qctv

./: .gitignore  CMakeLists.txt  README.md  abilityviewer.cpp  abilityviewer.h  abilityviewer.ui  downloadframe.cpp  downloadframe.h  downloadframe.ui  filebrowser.cpp  filebrowser.h  filebrowser.ui  hk_dvr.cpp  hk_dvr.h  hk_error.cpp  hk_error.h  hk_liveplayer.cpp  hk_play.cpp  hk_play.h  hk_playback.cpp  hk_sdk.cpp  hk_sdk.h  hk_utils.h  liveframe.cpp  liveframe.h  liveframe.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playbackframe.cpp  playbackframe.h  playbackframe.ui  playbackname.cpp  playbackname.h  playbacktime.cpp  playbacktime.h  playframe.cpp  playframe.h  playframe.ui  (+5 more)
resources/: dynchan_ability_input.xml  jpeg_cap_ability_input.xml  stream_ability_input.xml  user_ability_input.xml  videopic_ability_input.xml
sdk/: hk_callback.cpp  hk_callback.h  hk_dvr.cpp  hk_dvr.h  hk_error.cpp  hk_error.h  hk_liveplayer.cpp  hk_liveplayer.h  hk_playback.cpp  hk_playback.h  hk_sdk.cpp  hk_sdk.h
